Fix scroll overflow

--- a/packages/scss/src/components/richText/component.scss
+++ b/packages/scss/src/components/richText/component.scss
@@ -12,6 +12,7 @@
 	border-style: solid;
 	border-width: 1px;
 	border-radius: var(--pr-t-border-radius-input);
+	overflow: auto;
 
 	&:has(.richTextField-toolbar-formatting):has(.richTextField-toolbar-chips) {
 		min-block-size: calc(var(--components-richTextField-minHeight) + var(--pr-t-spacings-800) + var(--pr-t-spacings-25) + var(--pr-t-spacings-600));
